--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "private": "true",
   "scripts": {
     "test": "jest",
-    "test-coverage": "jest --coverage --coverageReporters=text"
+    "test-coverage": "jest --coverage --coverageReporters=text",
+    "test:lint": "eslint . --ext .tsx --ext .ts && jest",
+    "lint": "eslint . --ext .tsx --ext .ts"
   },
   "keywords": [],
   "author": "scerutti",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.3",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-jest": "^22.1.2",
     "jest": "^29.6.2",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
