--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,35 @@
 {
     "compilerOptions": {
-        "target": "ES6",
+        "target": "ESNext",
+        "lib": [
+            "DOM",
+            "DOM.Iterable",
+            "ESNext"
+        ],
         "module": "ESNext",
-        "outDir": "./dist",
-        "strict": true,
+        "skipLibCheck": true,
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "allowImportingTsExtensions": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        "jsx": "react-jsx",
+        "allowJs": true,
         "esModuleInterop": true,
-        "sourceMap": true,
-        "noImplicitAny": true,
-        "strictNullChecks": true
+        "composite": true,
+        "allowSyntheticDefaultImports": true,
+        "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true,
     },
     "include": [
-        "src/**/*.ts",
-        "*.ts"
+        "src",
+        "vite.config.ts"
     ],
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "build/**/*",
+        "src/__tests__/*"
     ]
 }
